--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HDH's Portfolio</title>
-	<link rel="stylesheet" href="/css/index.css"/>
+	<link rel="stylesheet" href="./css/index.css"/>
 </head>
 <body>
 
@@ -65,5 +65,5 @@
 
 	</div>
 </body>
-<script src="/js/index.js"></script>
+<script src="./js/index.js"></script>
 </html>
