--- a/index.html
+++ b/index.html
@@ -5,8 +5,135 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HDH's Portfolio</title>
-	<link rel="stylesheet" href="./css/index.css"/>
 </head>
+<style>
+	@font-face {
+    font-family: 'SBAggroB';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+	}
+
+	@font-face {
+		font-family: 'GmarketSansMedium';
+		src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	* {
+		margin: 0 auto;
+	}
+
+	a {
+		text-decoration: none;
+		color: black;
+	}
+
+	#header {
+		width: 100%;
+		height: 100%;
+		background:
+			linear-gradient(to right, rgba(70, 130, 180, 0.9), rgba(70, 130, 180, 0.5)),
+			url(/img/desk-593327_1280.jpg);
+		background-size: cover; 
+		background-position: center center;
+		background-repeat: no-repeat;
+	}
+
+	#header_top {
+		position: fixed;
+		width: 100%;
+	}
+
+	#header_top_box {
+		width: 1080px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 10px;
+	}
+
+	#header_top_box > div {
+		width: 100%;
+	}
+
+	.title {
+		font-size: 25px;
+		font-weight: bold;
+		font-family: 'GmarketSansMedium', sans-serif;
+	}
+
+	.title > a {
+		color: rgba(255, 255, 255, 0.6);
+	}
+
+	.menu {
+		display: flex;
+		justify-content: flex-end;
+	}
+
+	.menu > div > a{
+		margin:0 10px;
+		font-size: 18px;
+		font-weight: bold;
+		color: rgba(255, 255, 255, 0.6);
+		font-family: 'GmarketSansMedium', sans-serif;
+	}
+
+	#header_middle {
+		text-align: center;
+		padding: 100px 0 ;
+	}
+
+	.middle_title {
+		font-size: 55px;
+		margin-bottom: 30px;
+		line-height: 1.7;
+		color: white;
+		font-family: 'SBAggroB', sans-serif;
+	}
+
+	.middle_dis {
+		font-size: 20px;
+		line-height: 1.8;
+		color: white;
+		font-family: 'GmarketSansMedium', sans-serif;
+		color: rgba(255, 255, 255, 0.6);
+	}
+
+	#body {
+		width: 100%;
+	}
+
+	.inner_box {
+		width: 1080px;
+		height: 300px;
+		border: 1px solid skyblue;
+	}
+
+	#about_me_box {
+		background-color: white;
+	}
+
+	#skills_box{
+		background-color: greenyellow;
+	}
+
+	#archiving_box{
+		background-color: aqua;
+	}
+
+	#projects_box{
+		background-color: cornflowerblue;
+	}
+
+	#footer {
+		width: 100%;
+		height: 200px;
+		background-color: black;
+	}
+</style>
 <body>
 
 	<div id="header">
@@ -65,5 +192,26 @@
 
 	</div>
 </body>
-<script src="./js/index.js"></script>
+<script>
+	window.addEventListener("scroll", function () {
+    var topMenu = document.getElementById("header_top");
+    var content = document.getElementById("header_top_box");
+
+    // if (window.scrollY > content.clientHeight) {
+    //     topMenu.style.backgroundColor = "#444"; 
+    // }
+    // else if (window.scrollY == 0) {
+    //     topMenu.style.backgroundColor = "transparent";
+    // }
+
+      // 스크롤 위치에 따라 투명도를 조절
+  var opacity = window.scrollY / content.offsetHeight;
+
+  // 최대 투명도를 제한 (0.5로 설정, 필요에 따라 조절 가능)
+  opacity = Math.min(opacity, 1);
+
+  // 배경색 적용
+  topMenu.style.backgroundColor = "rgba(68, 68, 68, " + opacity + ")"
+});
+</script>
 </html>
