feat: header - image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <style>
 	@font-face {
-    font-family: 'SBAggroB';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+		font-family: 'SBAggroB';
+		src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
+		font-weight: normal;
+		font-style: normal;
 	}
 
 	@font-face {
@@ -35,7 +35,7 @@
 		height: 100%;
 		background:
 			linear-gradient(to right, rgba(70, 130, 180, 0.9), rgba(70, 130, 180, 0.5)),
-			url(/img/desk-593327_1280.jpg);
+			url(../img/desk-593327_1280.jpg);
 		background-size: cover; 
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -62,6 +62,7 @@
 		font-size: 25px;
 		font-weight: bold;
 		font-family: 'GmarketSansMedium', sans-serif;
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 	}
 
 	.title > a {
@@ -79,6 +80,7 @@
 		font-weight: bold;
 		color: rgba(255, 255, 255, 0.6);
 		font-family: 'GmarketSansMedium', sans-serif;
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 	}
 
 	#header_middle {
@@ -92,14 +94,17 @@
 		line-height: 1.7;
 		color: white;
 		font-family: 'SBAggroB', sans-serif;
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 	}
 
 	.middle_dis {
 		font-size: 20px;
+		font-weight: 300;
 		line-height: 1.8;
 		color: white;
 		font-family: 'GmarketSansMedium', sans-serif;
-		color: rgba(255, 255, 255, 0.6);
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+		color: rgba(255, 255, 255, 0.7);
 	}
 
 	#body {
