--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		height: 100%;
 		background:
 			linear-gradient(to right, rgba(70, 130, 180, 0.9), rgba(70, 130, 180, 0.5)),
-			url(../img/desk-593327_1280.jpg);
+			url(./img/desk-593327_1280.jpg);
 		background-size: cover; 
 		background-position: center center;
 		background-repeat: no-repeat;
