--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HDH's Portfolio</title>
-	<link href="./css/index.css">
+	<link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
 
@@ -64,5 +64,6 @@
 	<div id="footer">
 
 	</div>
+<script src="./js/index.js"></script>
 </body>
 </html>
