--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div id="header_middle">
 			<div class="middle_title">
 				- 홍 다 한 -<br>
-				백엔드 개발자 포트폴리오
+				웹 개발자 포트폴리오
 			</div>
 			<div class="middle_dis">
 				안녕하세요.<br>
-				신입 백엔드 개발자 홍다한입니다.<br>
+				신입 웹 개발자 홍다한입니다.<br>
 				< ?? & ?! & !! > <br>
 				저의 장점입니다.
 			</div>
@@ -40,25 +40,40 @@
 			<div id="about_me" class="inner_box">
 				<div id="about_me_title" class="body_title"><a onclick="goToScroll('aboutme')">ABOUT ME</a></div>
 				<div class="about_me_list">
-					<div>
-						<div class="ab_bold_text">이름</div>
-						<div class="ab_text">홍다한</div>
+					<div class="ab_text_box">
+						<div id="icon_person"></div>
+						<div>
+							<div class="ab_bold_text">이름</div>
+							<div class="ab_text">홍다한</div>
+						</div>
 					</div>
-					<div>
-						<div class="ab_bold_text">생년월일</div>
-						<div class="ab_text">2000.05.14</div>
+					<div class="ab_text_box">
+						<div id="icon_callender"></div>
+						<div>
+							<div class="ab_bold_text">생년월일</div>
+							<div class="ab_text">2000.05.14</div>
+						</div>
 					</div>
-					<div>
-						<div class="ab_bold_text">주소지</div>
-						<div class="ab_text">경기도 과천시</div>
+					<div class="ab_text_box">
+						<div id="icon_addr"></div>
+						<div>
+							<div class="ab_bold_text">주소지</div>
+							<div class="ab_text">경기도 과천시</div>
+						</div>
 					</div>
-					<div>
-						<div class="ab_bold_text">연락처</div>
-						<div class="ab_text">010-6649-0258</div>
+					<div class="ab_text_box">
+						<div id="icon_phone"></div>
+						<div>
+							<div class="ab_bold_text">연락처</div>
+							<div class="ab_text">010-6649-0258</div>
+						</div>
 					</div>
-					<div>
-						<div class="ab_bold_text">이메일</div>
-						<div class="ab_text">hongdh0514@gmail.com</div>
+					<div class="ab_text_box">
+						<div id="icon_message"></div>
+						<div>
+							<div class="ab_bold_text">이메일</div>
+							<div class="ab_text">hongdh0514@gmail.com</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -67,6 +82,57 @@
 		<div id="skills_box" class="skills">
 			<div id="skills" class="inner_box">
 				<div id="skills_title" class="body_title"><a onclick="goToScroll('skills')">SKILLS</a></div>
+				<div class="skills_box">
+					<div class="skills_list">
+						<div class="skills_title">Backend</div>
+						<div class="skills_content">
+							<div>JAVA</div>
+							<div>JSP & Servlet</div>
+							<div>Spring Boot</div>
+							<div>My Batis</div>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">Frontend</div>
+						<div class="skills_content">
+							<div>Javascript</div>
+							<div>JQuery</div>
+							<div>HTML</div>
+							<div>CSS</div>
+							<div>Ajax</div>
+							<div>React</div>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">Sever</div>
+						<div class="skills_content">
+							<div>Apache Tomcat</div>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">Collaborations</div>
+						<div class="skills_content">
+							<div>Github</div>
+							<div>Slack</div>
+							<div>Notion</div>
+							<div>Discord</div>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">DB</div>
+						<div class="skills_content">
+							<div>MySQL</div>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">Tools</div>
+						<div class="skills_content">
+							<div>intelliJ</div>
+							<div>Eclipse</div>
+							<div>Visual Studio Code</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
