feat: skills & text

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	<div id="body">
 		<div id="about_me_box" class="aboutme">
 			<div id="about_me" class="inner_box">
-				<div id="about_me_title" class="body_title"><a onclick="goToScroll('aboutme')">ABOUT ME</a></div>
-				<div class="about_me_list">
+				<div id="about_me_title" class="body_title"><a class="a_title" onclick="goToScroll('aboutme')">ABOUT ME</a></div>
+				<div class="about_me_list_top">
 					<div class="ab_text_box">
 						<div id="icon_person"></div>
 						<div>
@@ -61,6 +61,8 @@
 							<div class="ab_text">경기도 과천시</div>
 						</div>
 					</div>
+				</div>
+				<div class="about_me_list_bottom">
 					<div class="ab_text_box">
 						<div id="icon_phone"></div>
 						<div>
@@ -81,15 +83,17 @@
 		
 		<div id="skills_box" class="skills">
 			<div id="skills" class="inner_box">
-				<div id="skills_title" class="body_title"><a onclick="goToScroll('skills')">SKILLS</a></div>
+				<div id="skills_title" class="body_title"><a class="a_title" onclick="goToScroll('skills')">SKILLS</a></div>
 				<div class="skills_box">
 					<div class="skills_list">
 						<div class="skills_title">Backend</div>
 						<div class="skills_content">
+							<br>
 							<div>JAVA</div>
 							<div>JSP & Servlet</div>
 							<div>Spring Boot</div>
 							<div>My Batis</div>
+							<br>
 						</div>
 					</div>
 					<div class="skills_list">
@@ -104,24 +108,30 @@
 						</div>
 					</div>
 					<div class="skills_list">
-						<div class="skills_title">Sever</div>
-						<div class="skills_content">
-							<div>Apache Tomcat</div>
-						</div>
-					</div>
-					<div class="skills_list">
 						<div class="skills_title">Collaborations</div>
 						<div class="skills_content">
+							<br>
 							<div>Github</div>
 							<div>Slack</div>
 							<div>Notion</div>
 							<div>Discord</div>
+							<br>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_title">Sever</div>
+						<div class="skills_content">
+							<br>
+							<div>Apache Tomcat</div>
+							<br>
 						</div>
 					</div>
 					<div class="skills_list">
 						<div class="skills_title">DB</div>
 						<div class="skills_content">
+							<br>
 							<div>MySQL</div>
+							<br>
 						</div>
 					</div>
 					<div class="skills_list">
@@ -138,13 +148,12 @@
 		
 		<div id="archiving_box" class="archiving">
 			<div id="archiving" class="inner_box">
-				<div id="archiving_title" class="body_title"><a onclick="goToScroll('archiving')">ARCHIVING</a></div>
-			</div>
+				<div id="archiving_title" class="body_title"><a class="a_title" onclick="goToScroll('archiving')">ARCHIVING</a></div>
 		</div>
 		
 		<div id="projects_box" class="projects">
 			<div id="projects" class="inner_box">
-				<div id="projects_title" class="body_title"><a onclick="goToScroll('projects')">PROJECTS</a></div>
+				<div id="projects_title" class="body_title"><a class="a_title" onclick="goToScroll('projects')">PROJECTS</a></div>
 			</div>
 		</div>
 	</div>
