--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="middle_dis">
 				안녕하세요.<br>
 				신입 웹 개발자 홍다한입니다.<br>
-				< ?? & ?! & !! > <br>
+				< 열정 & 배려 & 긍정 > <br>
 				저의 장점입니다.
 			</div>
 		</div>
@@ -163,7 +163,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="box archiving_context_box" onclick="redirectToURL('https://naver.com')">
+					<!-- <div class="box archiving_context_box" onclick="redirectToURL('https://naver.com')">
 						<div class="skills_title">TISTORY</div>
 						<div class="skills_content">
 							<a href="https://github.com/dahan0514" target="_blank" class="style_a">https://github.com/dahan0514</a>
@@ -174,7 +174,7 @@
 								<li>꾸준함과 성실함을 기르기 위한 공간</li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -220,10 +220,10 @@
 										<b>Database</b>
 										MySQL										
 									</li>
-									<li onclick="test()">
+									<!-- <li onclick="test()">
 										<b>자세히 보기</b>
 										클릭!										
-									</li>
+									</li> -->
 								</ul>
 							</div>
 						</div>
@@ -265,10 +265,10 @@
 										<b>Database</b>
 										MySQL										
 									</li>
-									<li onclick="test()">
+									<!-- <li onclick="test()">
 										<b>자세히 보기</b>
 										클릭!										
-									</li>
+									</li> -->
 								</ul>
 							</div>
 						</div>
